--- a/css/styles.css
+++ b/css/styles.css
@@ -1,106 +1,97 @@
-*,
-*::before,
-*::after {
+*, *::before, *::after {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 500;
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
-
 body {
     width: 100vw;
     min-width: min-content;
+    overflow-x: hidden;
     height: 100vh;
-    min-width: min-content;
+    min-width: fit-content;
     background-color: #ffffff;
 }
-
 header {
     display: flex;
     flex-direction: column;
-    position: sticky;
+    width: 100%;
     height: fit-content;
-    box-shadow: 0px -30px 60px rgb(43, 43, 43);
-    background-color: #141414;
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.25);
 }
-
 #top-container {
     display: flex;
-    color: #ffffff;
-    
-    margin-left: 10px;
-    margin-right: 10px;
+    color: #ffffff;   
+    background-color: #181818;
 }
-
-#logo-container {
+#top-logo-content {
     align-self: center;
-    min-width: 225px;
-    max-width: 225px;
-    height: min-content;
+    min-width: 180px;
+    max-width: 180px;
+    height: max-content;
 }
-
-#logo-img {
-    width: 80%;
-    margin: 0.4rem auto;
+#top-logo-img {
+    width: 100%;
+    padding: 0.4rem;
 }
-
-#logo {
+#top-logo {
     width: 100%;
     height: 100%;
     transition: 0.3s;
     filter: drop-shadow(0px 0px 8px rgba(255, 255, 255, 0.384));
-
 }
-
-#logo:hover {
+#top-logo:hover {
     filter: drop-shadow(1px 1px 15px rgba(255, 255, 255, 0.6));
-
 }
-
 #header-container {
     width: 100%;
+    margin-right: 15px;
     display: flex;
     justify-content: space-between;
 }
-
 #header-title {
     flex: 80%;
+    padding: 0.4rem;
     align-self: center;
     min-width: min-content;
 }
-
-#header-title>h1 {
+#header-title h1 {
     text-align: center;
     white-space: nowrap;
     font-size: 60px;
     font-weight: 900;
 }
-
 #header-login {
     flex: 10%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-
+.log-btn {
+    width: 60px;
+    margin: 0px 5px;
+    padding: 5px;
+    font-size: 1rem;
+    border: none;
+    border-radius: 5px;
+    transition: 0.3s ease-in;
+}
+.log-btn:hover {
+    background-color: #858585;
+    color: #ffffff;
+}
 #header-cart {
     flex:5%;
     height: 100%;
+    margin-right: 7px;
 }
-
-.header-line {
-    min-height: 50%;
-    max-height: 50%;
-    min-width: 2px;
-    max-width: 2px;
-    background-color: rgba(255, 255, 255, 0.705);
-    margin: auto 10px auto 10px;
-}
-
 #header-cart-content{
     width: 100%;
     height: 100%;
     display: flex;
     margin: auto;
 }
-
 #cart-img-div {
     display: flex;
     width: 100%;
@@ -109,42 +100,33 @@ header {
     padding: 10px;
     text-align: center;
     align-self: center;
+    transition: 0.3s ease-in;
 }
-
-#cart-img-div:hover{
-    background-color: #313131;
-
+#cart-img-div:hover {
+    background-color: #363636;
 }
-
-
 #cart-img {
     width: 50px;
     height: 50px;
     margin: auto;
 }
-#cart-nbr{
-    background-color: #ffffff;
+#cart-nbr {
+    margin: auto 5px;
     min-width: 20px;
     min-height: 20px;
-    margin: auto;
     border-radius: 5px;
-    
-
+    background-color: #ffffff;
 }
-
 #nav-container {
     display: flex;
-    height: 30px;
+    height: 40px;
+    font-size: 1.3rem;
     background-color: white;
 }
-
 #head-nav {
-    margin-left: auto;
-    margin-right: auto;
-    width: 60%;
-
+    margin: 3px auto 5px auto ;
+    width: 55%;
 }
-
 #head-list {
     display: flex;
     flex-direction: row;
@@ -153,34 +135,133 @@ header {
     width: 100%;
     list-style-type: none;
     height: 100%;
-
 }
-
 .li-elem {
     flex: auto;
     text-align: center;
-    height: 80%;
+    height: 90%;
     margin-left: 5px;
     margin-right: 5px;
     border-radius: 5px;
-
+    padding: 0 5px;
+    transition: 0.3s ease-in;
 }
-
-.li-elem:hover {
-    transition: 0.2s;
-    background-color: #d8d8d8;
-}
-
 .li-elem>a {
     text-decoration: none;
+    font-weight: 600;
     color: black;
-    font-weight: 500;
 }
-
-
-
+.li-elem:hover {
+    background-color: #d8d8d8;
+    cursor: pointer;
+}
 .li-line {
     width: 2px;
-    height: 50%;
-    background-color: #141414;
+    height: 60%;
+    background-color: #202020;
+}
+main {
+    display: flex;
+    height: 100%;
+}
+#side-nav {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    min-width: 180px;
+    max-width: 180px;
+    padding: 20px 15px;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    background-color: #ffffff;
+    box-shadow: 5px 3px 15px rgba(0, 0, 0, 0.25);
+}
+#side-nav>a, .dropdown-btn, .dropdown-container>a {
+    display: block;
+    width: 100%;
+    text-align: left;
+    font-size: 1.3rem;
+    font-weight: 600;
+    color: #000000;
+    padding: 8px;
+    border: none;
+    border-radius: 5px;
+    background: none;
+    text-decoration: none;
+    transition: 0.3s ease-in;
+}
+#side-nav>a:hover, .dropdown-btn:hover, .dropdown-container>a:hover {
+    background-color: #d8d8d8;
+    cursor: pointer; 
+}
+.active {
+    background-color: #d8d8d8;
+    font-weight: 600;
+}
+.dropdown-container {
+    display: none;
+    flex-direction: column;
+    background-color: #ffffff;
+    color: #181818;
+    padding-left: 15px;
+}
+.dropdown-container a {
+    font-size: 1rem;
+}
+#page-content {
+    padding: 3rem;
+    text-align: justify;
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 40px 0;
+    background-color: #181818;
+    color: #aaaaaa;
+    cursor: pointer;
+    box-shadow: 0px -5px 15px rgba(0, 0, 0, 0.25);
+}  
+#footer-list {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    list-style:none;
+    text-align:center;
+}
+.footer-list-item {
+    padding: 0 10px;
+}
+.footer-list-item a {
+    font-weight: 600;
+    color: #aaaaaa;
+    text-decoration:none;
+    transition: 0.3s ease-in;
+}
+.footer-list-item a:hover {
+    color: #ffffff;
+}
+#footer-logo-img {
+    min-width: 125px;
+    max-width: 125px;
+    height: fit-content;
+    margin: 15px auto;
+}
+#footer-logo {
+    padding-left: 8px;
+    width: 100%;
+    height: 100%;
+    transition: 0.3s;
+    filter: drop-shadow(0px 0px 8px rgba(255, 255, 255, 0.384));
+}
+#footer-logo:hover {
+    filter: drop-shadow(1px 1px 15px rgba(255, 255, 255, 0.6));
+}
+#copyright {
+    font-weight: 600;
+    text-align: center;
+    color: #ffffff;
 }
