--- a/css/stylesCategories.css
+++ b/css/stylesCategories.css
@@ -1,18 +1,29 @@
 #gems {
-    display: grid;
-    grid-gap: 10px;
-    align-content: space-between;
-    justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
+    height: min-content;
+    align-content: space-evenly;
+    justify-content: space-evenly;
     margin: auto auto;
+    padding-right: 20px;
 }
-
-/* .gem img:hover {
-    transform: scale(1.05);
-} */
-
 .gem {
     display: flex;
     flex-direction: column;
     text-align: center;
-    margin: auto;
+    margin: 40px 20px;
+}
+.gem-name {
+    color: #ffffff;
+    font-weight: 700;
+    font-size: 1.3rem;
+    padding: 10px 0;
+}
+.gem img {
+    border-radius: 10px;
+    transition: 0.2s ease-in;
+}
+.gem img:hover {
+    transform: scale(1.06);
+    filter: drop-shadow(0px 0px 15px rgba(255, 255, 255, 0.384));
 }
