--- a/css/styles.css
+++ b/css/styles.css
@@ -64,16 +64,25 @@ header {
     font-weight: 900;
     padding: 0 30px 0 50px;
 }
-#header-login {
+#header-log-cart {
+    display: flex;
+    flex-direction: row;
+    justify-items: space-between;
+}
+
+#header-log {
     flex: 10%;
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-right: 20px;
 }
 .log-btn {
     width: 70px;
-    margin: 5px 5px;
+    margin: 10px 5px;
     padding: 5px;
+    text-align: center;
+    text-decoration: none;
     font-size: 1rem;
     border: none;
     border-radius: 5px;
