--- a/css/styles_log.css
+++ b/css/styles_log.css
@@ -65,3 +65,13 @@ input:focus{
     cursor: pointer;
     background-color: #238636;
 }
+#sign-up-link {
+    padding-left: 5px;
+    text-decoration: none;
+    color: rgb(134, 172, 254);
+}
+
+
+#sign-up-link:visited {
+    color: rgb(134, 172, 254);
+}
