--- a/css/styles_log.css
+++ b/css/styles_log.css
@@ -63,6 +63,16 @@ input:focus {
     cursor: pointer;
     background-color: #238636;
 }
+#sign-up-container {
+    margin-top: 10px;
+    border: none;
+    border-radius: 5px;
+    width: 100%;
+    background-color: #323232;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.7);
+    text-align: center;
+    padding-bottom: 10px;
+}
 #sign-up-link {
     padding-left: 5px;
     text-decoration: none;
