--- a/css/styles_categories.css
+++ b/css/styles_categories.css
@@ -23,7 +23,7 @@
     height: min-content;
     align-content: space-around;
     justify-content: space-around;
-    margin: auto auto 40px auto;
+    margin: auto 70px;
     padding: 0 20px 0 30px;
 }
 .gem {
