--- a/css/styles_cart.css
+++ b/css/styles_cart.css
@@ -3,9 +3,11 @@
 }
 #order-content {
     margin: 3% 0;
+    width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
 }
 table {
     width: 50%;
